Proyecto3/kube/go-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-client-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-client
  template:
    metadata:
      labels:
        app: go-client
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "go-client-dapr"
        dapr.io/app-port: "8081"
        dapr.io/app-protocol: "http"
    spec:
      containers:
        - name: go-client
          image: 35.237.182.41:5000/go-client:v1
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
