Proyecto3/kube/rust-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
        - name: rust-api
          image: 35.237.182.41:5000/rust-api:v2
          ports:
            - containerPort: 8080
          readinessProbe: # Requisito del HPA y Probes [Paso anterior]
            httpGet:
              path: /health
              port: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
