Proyecto3/kube/go-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-client-service
  namespace: default
spec:
  selector:
    app: go-client
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
