Proyecto3/kube/go-receiver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-receiver-service
  namespace: default
spec:
  selector:
    app: go-receiver
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
