Proyecto3/kube/grpc-server.yaml
# Servicio para comunicación interna (ClusterIP)
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
  namespace: default
spec:
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051

---
# Deployment 2: gRPC Server + RabbitMQ Writer (1 réplica)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-deployment-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server
      deployment: writer-2
  template:
    metadata:
      labels:
        app: go-server
        deployment: writer-2
    spec:
      containers:
        - name: go-server
          image: <IP_VM_ZOT>:5000/go-server:v1
          ports:
            - containerPort: 50051
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 15
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
# Deployment 3: gRPC Server + RabbitMQ Writer (2 réplicas)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-deployment-3
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-server
      deployment: writer-3
  template:
    metadata:
      labels:
        app: go-server
        deployment: writer-3
    spec:
      containers:
        - name: go-server
          image: <IP_VM_ZOT>:5000/go-server:v1
          ports:
            - containerPort: 50051
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 15
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
