Proyecto3/kube/rust-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: default
spec:
  selector:
    app: rust-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
