Proyecto3/kube/rust-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rust-api-httproute
  namespace: default
spec:
  parentRefs:
    - name: military-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grpc-202300625
      backendRefs:
        - name: rust-api-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /dapr-202300625
      backendRefs:
        - name: rust-api-service
          port: 80
