Proyecto3/kube/test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-nginx-httproute
  namespace: default
spec:
  parentRefs:
    - name: military-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      backendRefs:
        - name: test-nginx-service
          port: 80
